// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer component should render with left positioned by default 1`] = `
.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  overflow: auto;
  padding: 0 2.4rem;
}

.c5 {
  padding: 0 2.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-shadow: 0 -1.8rem 1.6rem -1.6rem rgba(176,188,200,0.2);
}

.c2 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #ffffff;
}

.c2 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #13181D;
}

.c1 {
  padding: 1.6rem 2.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  border: 1px solid #C7D0D8;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100vh;
  background-color: #ffffff;
  width: 32rem;
  position: fixed;
  z-index: 10;
  top: 0;
  box-shadow: 0 4px 32px 0 rgb(67,84,101,50%);
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  left: 0;
}

<div>
  <aside
    class="c0"
    width="32rem"
  >
    <div
      class="c1"
    >
      <p>
        Test Header
      </p>
      <svg
        bgColor="#ffffff"
        class="c2 c3"
        fill="none"
        height="1em"
        iconColor="#13181D"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
    <div
      class="c4"
    >
      CONTENT
    </div>
    <div
      class="c5"
    >
      Test Footer
    </div>
  </aside>
</div>
`;

exports[`Drawer component should render with right positioned by default 1`] = `
.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  overflow: auto;
  padding: 0 2.4rem;
}

.c5 {
  padding: 0 2.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-shadow: 0 -1.8rem 1.6rem -1.6rem rgba(176,188,200,0.2);
}

.c2 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #ffffff;
}

.c2 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #13181D;
}

.c1 {
  padding: 1.6rem 2.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  border: 1px solid #C7D0D8;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100vh;
  background-color: #ffffff;
  width: 32rem;
  position: fixed;
  z-index: 10;
  top: 0;
  box-shadow: 0 4px 32px 0 rgb(67,84,101,50%);
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  right: 0;
}

<div>
  <aside
    class="c0"
    width="32rem"
  >
    <div
      class="c1"
    >
      <p>
        Test Header
      </p>
      <svg
        bgColor="#ffffff"
        class="c2 c3"
        fill="none"
        height="1em"
        iconColor="#13181D"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
    <div
      class="c4"
    >
      CONTENT
    </div>
    <div
      class="c5"
    >
      Test Footer
    </div>
  </aside>
</div>
`;
